--- a/QwikNews/Base.lproj/Main.storyboard
+++ b/QwikNews/Base.lproj/Main.storyboard
@@ -1,24 +1,171 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ppd-Nk-WMA">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--CategoriesViewController-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController title="CategoriesViewController" id="BYZ-38-t0r" customClass="CategoriesViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="hMW-Pu-c7u">
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="npy-Dx-I32">
+                                    <size key="itemSize" width="97" height="85"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="10" minY="10" maxX="10" maxY="10"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CategoryCell" id="0MC-As-ehd" customClass="CategoryCollectionViewCell">
+                                        <rect key="frame" x="10" y="10" width="97" height="85"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="97" height="85"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Science-and-nature" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hdB-KE-CXE">
+                                                    <rect key="frame" x="7" y="10" width="83" height="65"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </view>
+                                        <color key="backgroundColor" red="0.99400228260000001" green="0.43979182839999997" blue="0.34771895409999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstItem="hdB-KE-CXE" firstAttribute="leading" secondItem="0MC-As-ehd" secondAttribute="leading" constant="7" id="1OD-vy-qsg"/>
+                                            <constraint firstItem="hdB-KE-CXE" firstAttribute="top" secondItem="0MC-As-ehd" secondAttribute="top" constant="10" id="Fn7-Fk-tvI"/>
+                                            <constraint firstAttribute="bottom" secondItem="hdB-KE-CXE" secondAttribute="bottom" constant="10" id="Jj2-HT-iet"/>
+                                            <constraint firstAttribute="trailing" secondItem="hdB-KE-CXE" secondAttribute="trailing" constant="7" id="qd2-Rw-3gk"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="categoryLabel" destination="hdB-KE-CXE" id="kPd-ZC-PQc"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="L5J-sf-u1G"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="i5g-E7-nuu"/>
+                                </connections>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="hMW-Pu-c7u" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="M93-2p-0bM"/>
+                            <constraint firstItem="hMW-Pu-c7u" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="NRd-Zy-2AG"/>
+                            <constraint firstItem="hMW-Pu-c7u" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="XDp-Ni-jiS"/>
+                            <constraint firstItem="hMW-Pu-c7u" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="sQF-uW-zFK"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" title="All Categories" id="6UF-Jp-np0">
+                        <barButtonItem key="leftBarButtonItem" systemItem="camera" id="dA8-Mm-QUZ">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Rec." id="GsP-RS-tWU">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="collectionView" destination="hMW-Pu-c7u" id="EV3-Bt-Trk"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1488.8" y="-238.83058470764618"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="A1y-ON-f2s">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="ppd-Nk-WMA" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="VW4-ac-r8L">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <color key="barTintColor" red="0.56034034489999995" green="0.87316280599999996" blue="0.66495734449999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="1gg-aS-ciB" kind="relationship" relationship="viewControllers" id="7dP-eR-QgN"/>
+                        <segue destination="QDT-1Y-Xbe" kind="relationship" relationship="viewControllers" id="y9U-bl-d9M"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Z6K-rX-NWU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-267.19999999999999" y="33.283358320839582"/>
+        </scene>
+        <!--TopHeadlinesViewController-->
+        <scene sceneID="tnW-gm-Via">
+            <objects>
+                <viewController title="TopHeadlinesViewController" id="sOj-Gr-x6v" customClass="TopHeadlinesViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Msi-cs-zSm">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <viewLayoutGuide key="safeArea" id="Ne4-WQ-cuJ"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Top Headlines" id="Bv3-X2-ffZ"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KCL-uW-hCZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1489" y="541"/>
+        </scene>
+        <!--All Categories-->
+        <scene sceneID="5BD-mq-tYs">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="1gg-aS-ciB" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="All Categories" id="J1u-ay-Y43"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="XIi-CW-0eQ">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.56034034489999995" green="0.87316280599999996" blue="0.66495734449999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Tc2-fu-LeB"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Pbs-Tw-iEI" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="681" y="-239"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Kbg-tK-vMq">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="QDT-1Y-Xbe" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" systemItem="mostViewed" id="qDI-uU-9cJ"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="gRn-GE-7ni">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.56034034489999995" green="0.87316280599999996" blue="0.66495734449999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="sOj-Gr-x6v" kind="relationship" relationship="rootViewController" id="fNF-W3-IUa"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UdZ-4r-HZ5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="680" y="541.52923538230891"/>
         </scene>
     </scenes>
 </document>
