--- a/QwikNews/Base.lproj/Main.storyboard
+++ b/QwikNews/Base.lproj/Main.storyboard
@@ -89,11 +89,27 @@
                     </navigationItem>
                     <connections>
                         <outlet property="collectionView" destination="hMW-Pu-c7u" id="EV3-Bt-Trk"/>
+                        <segue destination="U5L-lP-hIx" kind="show" identifier="ShowArticleList" id="oX0-g3-gMu"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1488.8" y="-238.83058470764618"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="pUk-mi-xpX">
+            <objects>
+                <viewController id="U5L-lP-hIx" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="KMo-2M-KtO">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <viewLayoutGuide key="safeArea" id="n1N-mL-JBb"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="F4s-kz-GIH" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2407" y="-239"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="A1y-ON-f2s">
