--- a/QwikNews/Base.lproj/Main.storyboard
+++ b/QwikNews/Base.lproj/Main.storyboard
@@ -143,14 +143,33 @@
                     <view key="view" contentMode="scaleToFill" id="Msi-cs-zSm">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ehe-IY-vdF">
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="sOj-Gr-x6v" id="1vh-YT-nkV"/>
+                                    <outlet property="delegate" destination="sOj-Gr-x6v" id="gpz-X6-wyq"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="ehe-IY-vdF" firstAttribute="bottom" secondItem="Ne4-WQ-cuJ" secondAttribute="bottom" id="1lW-d7-iEj"/>
+                            <constraint firstItem="ehe-IY-vdF" firstAttribute="trailing" secondItem="Ne4-WQ-cuJ" secondAttribute="trailing" id="9Y3-aD-9nn"/>
+                            <constraint firstItem="ehe-IY-vdF" firstAttribute="top" secondItem="Ne4-WQ-cuJ" secondAttribute="top" id="FB7-7Q-74Z"/>
+                            <constraint firstItem="ehe-IY-vdF" firstAttribute="leading" secondItem="Ne4-WQ-cuJ" secondAttribute="leading" id="yOC-us-WPT"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Ne4-WQ-cuJ"/>
                     </view>
                     <navigationItem key="navigationItem" title="Top Headlines" id="Bv3-X2-ffZ"/>
+                    <connections>
+                        <outlet property="tableView" destination="ehe-IY-vdF" id="sGA-ne-FWC"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KCL-uW-hCZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1489" y="541"/>
+            <point key="canvasLocation" x="1488.8" y="540.17991004497753"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="5BD-mq-tYs">
@@ -167,7 +186,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="XIi-CW-0eQ">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="barTintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="barTintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <textAttributes key="titleTextAttributes">
                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         </textAttributes>
@@ -196,7 +215,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="gRn-GE-7ni">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="barTintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="barTintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <textAttributes key="titleTextAttributes">
                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         </textAttributes>
