--- a/QwikNews/Base.lproj/Main.storyboard
+++ b/QwikNews/Base.lproj/Main.storyboard
@@ -144,9 +144,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ehe-IY-vdF">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ehe-IY-vdF">
                                 <rect key="frame" x="0.0" y="64" width="375" height="554"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="separatorColor" red="0.1911550909280777" green="0.6378670334815979" blue="0.26147949695587158" alpha="1" colorSpace="calibratedRGB"/>
+                                <inset key="separatorInset" minX="50" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <connections>
                                     <outlet property="dataSource" destination="sOj-Gr-x6v" id="1vh-YT-nkV"/>
                                     <outlet property="delegate" destination="sOj-Gr-x6v" id="gpz-X6-wyq"/>
@@ -165,11 +167,27 @@
                     <navigationItem key="navigationItem" title="Top Headlines" id="Bv3-X2-ffZ"/>
                     <connections>
                         <outlet property="tableView" destination="ehe-IY-vdF" id="sGA-ne-FWC"/>
+                        <segue destination="WAp-Sp-QZ9" kind="show" identifier="ShowArticleInfoSegue" id="AK0-89-4qh"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KCL-uW-hCZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1488.8" y="540.17991004497753"/>
+        </scene>
+        <!--Article Info View Controller-->
+        <scene sceneID="20D-uq-9eP">
+            <objects>
+                <viewController id="WAp-Sp-QZ9" customClass="ArticleInfoViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="J5w-pH-oys">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <viewLayoutGuide key="safeArea" id="y73-OF-WHy"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2kY-Gy-Pir" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2374" y="540"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="5BD-mq-tYs">
