--- a/QwikNews/Base.lproj/LaunchScreen.storyboard
+++ b/QwikNews/Base.lproj/LaunchScreen.storyboard
@@ -23,20 +23,9 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="QwikNews" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YQm-6s-fCu">
-                                <rect key="frame" x="16" y="85" width="343" height="76.5"/>
+                                <rect key="frame" x="47.5" y="295" width="280.5" height="76.5"/>
                                 <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="55"/>
-                                <color key="textColor" red="0.85043728351593018" green="0.21816034615039825" blue="0.15920260548591614" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                                <color key="shadowColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                <size key="shadowOffset" width="2" height="-1"/>
-                            </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="newspaper.png" translatesAutoresizingMaskIntoConstraints="NO" id="eO9-9E-dPG">
-                                <rect key="frame" x="45" y="187.5" width="284" height="256"/>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Find new's articles all across the globe" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SdH-mK-tYf">
-                                <rect key="frame" x="38" y="468.5" width="299" height="69.5"/>
-                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="25"/>
-                                <color key="textColor" red="0.85043728351593018" green="0.21816034615039825" blue="0.15920260548591614" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="textColor" red="0.1911550909280777" green="0.6378670334815979" blue="0.26147949695587158" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                                 <color key="shadowColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <size key="shadowOffset" width="2" height="-1"/>
@@ -44,15 +33,8 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="YQm-6s-fCu" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="65" id="2sS-j5-M7F"/>
-                            <constraint firstItem="SdH-mK-tYf" firstAttribute="top" secondItem="eO9-9E-dPG" secondAttribute="bottom" constant="25" id="4rM-k7-per"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="YQm-6s-fCu" secondAttribute="trailing" constant="16" id="56e-9p-32s"/>
-                            <constraint firstItem="eO9-9E-dPG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="45" id="5BX-dR-sLd"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="eO9-9E-dPG" secondAttribute="trailing" constant="46" id="H4a-Lv-fJp"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="SdH-mK-tYf" secondAttribute="trailing" constant="38" id="UOl-ZY-XB3"/>
-                            <constraint firstItem="YQm-6s-fCu" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="WCA-c8-1f8"/>
-                            <constraint firstItem="SdH-mK-tYf" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="38" id="ik2-40-Cdp"/>
-                            <constraint firstItem="eO9-9E-dPG" firstAttribute="top" secondItem="YQm-6s-fCu" secondAttribute="bottom" constant="26" id="wGM-DP-m1V"/>
+                            <constraint firstItem="YQm-6s-fCu" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="8sy-8M-KXx"/>
+                            <constraint firstItem="YQm-6s-fCu" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Npl-OQ-B8h"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -62,7 +44,4 @@
             <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="newspaper.png" width="256" height="256"/>
-    </resources>
 </document>
