--- a/QwikNews/Base.lproj/Main.storyboard
+++ b/QwikNews/Base.lproj/Main.storyboard
@@ -115,6 +115,7 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Xvj-1w-IHN">
                                 <rect key="frame" x="0.0" y="64" width="375" height="554"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="separatorColor" red="0.1911550909280777" green="0.6378670334815979" blue="0.26147949695587158" alpha="1" colorSpace="calibratedRGB"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ArticleCell" textLabel="Xtz-Qw-hSQ" detailTextLabel="V6F-tc-bkc" style="IBUITableViewCellStyleSubtitle" id="a10-ys-qaY">
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
